--- a/views/detail_register.ejs
+++ b/views/detail_register.ejs
@@ -25,7 +25,7 @@
                             <label>
                                 제목
                             </label>
-                            <input type="text" name="title" placeholder="제목을 입력하세요" class="form-control">
+                            <input type="text" name="title" placeholder="제목을 입력하세요" class="form-control" value="<%=schedule_id%>">
                         </div>
                     </div>
                 </div>
