--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -112,7 +112,7 @@
 										</li>
 									</ul>
 
-									<a href="/detail/register/<%=schedule.id%>" class="btn btn-reveal btn-default">
+									<a href="/detail/register?id=<%=schedule.id%>&date=<%=dates[i-1]%>" class="btn btn-reveal btn-default">
 										<i class="fa fa-plus"></i>
 										<span>작성 하기</span>
 									</a>
