--- a/views/detail_register.ejs
+++ b/views/detail_register.ejs
@@ -25,7 +25,8 @@
                             <label>
                                 제목
                             </label>
-                            <input type="text" name="title" placeholder="제목을 입력하세요" class="form-control" value="<%=schedule_id%>">
+                            <input type="text" name="title" placeholder="제목을 입력하세요" class="form-control"
+                                   value="<%= schedule_id %>">
                         </div>
                     </div>
                 </div>
@@ -43,13 +44,7 @@
                 <div class="row">
                     <div class="form-group">
                         <div class="col-md-12 col-sm-12" id="add_div">
-                            <div class="fancy-file-upload fancy-file-primary">
-                                <i class="fa fa-upload"></i>
-                                <input type="file" class="form-control" name="img1"
-                                       onchange="jQuery(this).next('input').val(this.value);"/>
-                                <input type="text" class="form-control" placeholder="no file selected" readonly=""/>
-                                <span class="button">Choose File</span>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -87,6 +82,7 @@
     <span class="button">Choose File</span>
 </div>
 <script>
+    var number = 1;
     function addPictureButton() {
         var fileDIV = document.createElement("div");
         fileDIV.setAttribute("class", "fancy-file-upload fancy-file-primary");
@@ -95,7 +91,7 @@
         var inputFile = document.createElement("INPUT");
         inputFile.setAttribute("type", "file");
         inputFile.setAttribute("class", "form-control");
-        inputFile.setAttribute("name", "img1");
+        inputFile.setAttribute("name", "img" + number);
         inputFile.setAttribute("onchange", "jQuery(this).next('input').val(this.value);");
         var inputText = document.createElement("INPUT");
         inputText.setAttribute("type", "text");
@@ -111,6 +107,7 @@
         fileDIV.appendChild(inputText);
         fileDIV.appendChild(span);
         document.getElementById("add_div").appendChild(fileDIV);
+        number++;
     }
 </script>
 
