add detail list

--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -128,7 +128,7 @@
 
 									<% if(check[i-1] == true) {%>
 										<p><%=detail_content[i-1]%></p>
-										<a href="/detail/register?id=<%=schedule.id%>&date=<%=dates[i-1]%>" class="btn btn-reveal btn-default">
+										<a href="#" class="btn btn-reveal btn-default">
 											<i class="fa fa-book"></i>
 											<span>자세히 보기</span>
 										</a>
