--- a/views/detail_register.ejs
+++ b/views/detail_register.ejs
@@ -22,8 +22,8 @@
                 <div class="row">
                     <div class="form-group">
                         <div class="col-md-12 col-sm-12">
-                            <input type="text" name="schedule_id" value="<%=schedule_id %>">
-                            <input type="text" name="schedule_date" value="<%=schedule_date %>">
+                            <input type="hidden" name="schedule_id" value="<%=schedule_id %>">
+                            <input type="hidden" name="schedule_date" value="<%=schedule_date %>">
                         </div>
                         <div class="col-md-12 col-sm-12">
                             <label>
