--- a/views/travel_plan_detail.ejs
+++ b/views/travel_plan_detail.ejs
@@ -158,7 +158,7 @@
 
 
 			<!-- article content -->
-			<div><%= detail.contents %></div>
+			<div><%- detail.contents %></div>
 			<!-- /article content -->
 
 
