--- a/views/schedule_list.ejs
+++ b/views/schedule_list.ejs
@@ -69,10 +69,10 @@
 
                     <p><%= scheduleList[i].description%></p>
 
-                    <button class="btn btn-reveal btn-default" data-toggle="modal" data-target=".bs-example-modal-full">
+                    <a href="/schedule/list_detail/<%=scheduleList[i].id%>" class="btn btn-reveal btn-default" data-toggle="modal">
                         <i class="fa fa-plus"></i>
                         <span>Read More</span>
-                    </button>
+                    </a>
 
                 </div>
                 <!-- /POST ITEM -->
