login session 구현

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -151,7 +151,7 @@
 											<h2 class="size-20">Login</h2>
 										</div>
 
-										<form class="sky-form" method="post" action="#" autocomplete="off">
+										<form class="sky-form" method="post" action="/login" autocomplete="off">
 											<div class="clearfix">
 
 												<!-- Email -->
@@ -159,7 +159,7 @@
 													<label>ID</label>
 													<label class="input margin-bottom-10">
 														<i class="ico-append fa fa-envelope"></i>
-														<input required="" type="text">
+														<input required="" type="text" name="user_id">
 														<b class="tooltip tooltip-bottom-right">Needed to verify your account</b>
 													</label>
 												</div>
@@ -169,7 +169,7 @@
 													<label>Password</label>
 													<label class="input margin-bottom-10">
 														<i class="ico-append fa fa-lock"></i>
-														<input required="" type="password">
+														<input required="" type="password" name="user_pw">
 														<b class="tooltip tooltip-bottom-right">Type your account password</b>
 													</label>
 												</div>
