--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -255,12 +255,10 @@
 
 
 		<!-- JAVASCRIPT FILES -->
-		<!--<script type="text/javascript">var plugin_path = '/assets/plugins/';</script>-->
+        <script type="text/javascript">var plugin_path = '/assets/plugins/';</script>
 		<script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 
 		<script type="text/javascript" src="/assets/js/scripts.js"></script>
-		
-		<!-- STYLESWITCHER - REMOVE -->
-		<script async type="text/javascript" src="/assets/plugins/styleswitcher/styleswitcher.js"></script>
+
 	</body>
 </html>
