--- a/views/TopNav.ejs
+++ b/views/TopNav.ejs
@@ -100,17 +100,15 @@
                 <ul id="topMain" class="nav nav-pills nav-main">
                     <li class="dropdown"><!-- HOME -->
                         <a class="dropdown-toggle" href="#">
-                            HOME
+                            TIME LINE
                         </a>
                         <ul class="dropdown-menu">
                             <li class="divider"></li>
-                            <li><a href="index-simple-revolution.html">HOME SIMPLE - REVOLUTION</a></li>
+                            <li><a href="/timeline">TIME LINE - Date</a></li>
                             <li class="divider"></li>
-                            <li><a href="index-simple-layerslider.html">HOME SIMPLE - LAYERSLIDER</a></li>
+                            <li><a href="/timeline/recommend">TIME LINE - Recommend</a></li>
                             <li class="divider"></li>
-                            <li><a href="index-simple-parallax.html">HOME SIMPLE - PARALLAX</a></li>
-                            <li class="divider"></li>
-                            <li><a href="index-simple-youtube.html">HOME SIMPLE - YOUTUBE</a></li>
+                            <li><a href="/timeline/comments">TIME LINE  - Comments</a></li>
                             <li class="divider"></li>
                         </ul>
                     </li>
