add timeline heart

--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -116,6 +116,12 @@
 									<ul class="blog-post-info list-inline">
 										<li>
 											<a href="#">
+												<i class="fa fa-heart-o"></i>
+												<span class="font-lato"><%=detail_recommend[i-1]%></span>
+											</a>
+										</li>
+										<li>
+											<a href="#">
 												<i class="fa fa-clock-o"></i>
 												<span class="font-lato"><%=dates[i-1]%></span>
 											</a>
