--- a/views/TopNav.ejs
+++ b/views/TopNav.ejs
@@ -15,9 +15,9 @@
                     <i class="fa fa-search"></i>
                 </a>
                 <div class="search-box">
-                    <form action="page-search-result-1.html" method="get">
+                    <form action="/search" method="get">
                         <div class="input-group">
-                            <input type="text" name="src" placeholder="Search" class="form-control" />
+                            <input type="text" name="searchTitle" placeholder="Search" class="form-control" />
                             <span class="input-group-btn">
 												<button class="btn btn-primary" type="submit">Search</button>
 											</span>
@@ -75,7 +75,7 @@
 
         <!-- Logo -->
         <a class="logo pull-left" href="/">
-            <img src="/assets/images/logo_dark.png" alt="" />
+            <img src="/assets/images/logo_triptter.png" alt="" />
         </a>
 
         <!--
