--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -4,7 +4,7 @@
 <!--[if gt IE 9]><!-->	<html> <!--<![endif]-->
 <head>
     <meta charset="utf-8" />
-    <title>Smarty - Multipurpose + Admin</title>
+    <title>Triptter - Tour SNS</title>
     <meta name="keywords" content="HTML5,CSS3,Template" />
     <meta name="description" content="" />
     <meta name="Author" content="Dorin Grigoras [www.stepofweb.com]" />
