--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -5,24 +5,24 @@
 
             <div class="col-md-3">
                 <!-- Footer Logo -->
-                <img class="footer-logo" src="/assets/images/logo-footer.png" alt="" />
+                <img class="footer-logo" src="/assets/images/logo-triptter-footer.png" alt="" />
 
                 <!-- Small Description -->
-                <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+                <p>여행일정을 공유하는 SNS</p>
 
                 <!-- Contact Address -->
                 <address>
                     <ul class="list-unstyled">
                         <li class="footer-sprite address">
-                            PO Box 21132<br>
-                            Here Weare St, Melbourne<br>
-                            Vivas 2355 Australia<br>
+                            우편번호 : 16499<br>
+                            경기도 수원시 영통구<br>
+                            월드컵로 206 아주대학교<br>
                         </li>
                         <li class="footer-sprite phone">
-                            Phone: 1-800-565-2390
+                            핸드폰 : 010-4765-8214
                         </li>
                         <li class="footer-sprite email">
-                            <a href="mailto:support@yourname.com">support@yourname.com</a>
+                            <a href="mailto:support@yourname.com">triptter@ajou.ac.kr</a>
                         </li>
                     </ul>
                 </address>
