--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,9 +87,8 @@
                 <div class="row">
                   <div class="text-center col-md-8 col-xs-12 col-md-offset-2">
 
-                    <h1 class="bold font-raleway wow fadeInUp" data-wow-delay="0.4s">WELCOME TO SMARTY</h1>
-                    <p class="lead font-lato weight-300 hidden-xs wow fadeInUp" data-wow-delay="0.6s">Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam.</p>
-                    <a class="btn btn-default btn-lg wow fadeIn" data-wow-delay="1.5s" href="#">PURCHASE NOW</a>
+                    <h1 class="bold font-raleway wow fadeInUp" data-wow-delay="0.4s">WELCOME TO TRIPTTER</h1>
+                    <p class="lead font-lato weight-300 hidden-xs wow fadeInUp" data-wow-delay="0.6s">이 페이지에는 상세 일정 미리 보기가 들어갑니다</p>
 
                   </div>
                 </div>
@@ -113,9 +112,8 @@
                 <div class="row">
                   <div class="text-center col-md-8 col-xs-12 col-md-offset-2">
 
-                    <h1 class="bold font-raleway wow fadeInUp" data-wow-delay="0.4s">WELCOME TO SMARTY</h1>
-                    <p class="lead font-lato weight-300 hidden-xs wow fadeInUp" data-wow-delay="0.6s">Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam.</p>
-                    <a class="btn btn-default btn-lg wow fadeIn" data-wow-delay="1.5s" href="#">PURCHASE NOW</a>
+                    <h1 class="bold font-raleway wow fadeInUp" data-wow-delay="0.4s">WELCOME TO TRIPTTER</h1>
+                    <p class="lead font-lato weight-300 hidden-xs wow fadeInUp" data-wow-delay="0.6s">이 페이지에는 상세 일정 미리 보기가 들어갑니다</p>
 
                   </div>
                 </div>
